resolve personal overdraft print layout issue, redesign the view part

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -180,12 +180,15 @@ button {
   }
 }
 
+@page {
+  size: A4 !important;
+  margin: 17mm !important;
+}
+
 @media print {
   @page {
-    margin-top: 200px !important;
-    margin-bottom: 100px !important;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important;
+    size: A4 !important;
+    margin: 17mm !important;
   }
   .pageBreak {
     page-break-before: always !important;
